# app_cfdi_cpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
docs/: XMLREADER.md
include/: application.hpp  cfdialgorithms.hpp  cfdicomplement.hpp  cfdiconcept.hpp  cfdiheader.hpp  cfdiissuer.hpp  cfdireceiver.hpp  cfdistamp.hpp  cfditax.hpp  cfditransfer.hpp  directoryscanner.hpp  document.hpp  output.hpp  summary.hpp  utilities.hpp  window.hpp  xmlbuffer.hpp  xmlcdataparser.hpp  xmlcommentparser.hpp  xmldeclarationparser.hpp  xmldoctypeparser.hpp  xmlelementparser.hpp  xmlfragmentparser.hpp  xmlnode.hpp  xmlnodetype.hpp  xmlprocessinginstructionparser.hpp  xmlreader.hpp  xmltextparser.hpp
installer/: setup.iss
src/: application.cpp  application.ixx  cfdi.util.ixx  cfdicomplement.ixx  cfdiconcept.ixx  cfdidocument.cpp  cfdidocument.ixx  cfdiheader.ixx  cfdiissuer.ixx  cfdireceiver.ixx  cfdiscanner.cpp  cfdistamp.ixx  cfdisummary.ixx  cfditax.ixx  cfdiwritter.ixx  directoryscanner.cpp  document.cpp  output.cpp  program.cpp  summary.cpp  utilities.cpp  window.cpp  xmlbuffer.cpp  xmlcdataparser.cpp  xmlcommentparser.cpp  xmldeclarationparser.cpp  xmldeclarationparser.ixx  xmldoctypeparser.cpp  xmlelementparser.cpp  xmlfragmentparser.cpp  xmlnode.cpp  xmlnode.ixx  xmlnodetype.ixx  xmlprocessinginstructionparser.cpp  xmlprocessinginstructionparser.ixx  xmlreader.cpp  xmlreader.ixx  xmltextparser.cpp
src/cfdi.app/: cfdi.app.ixx  window.cpp  window.ixx
src/cfdi.doc/: cfdi.doc.ixx  cfdidocument.cpp  cfdidocument.ixx  cfdiheader.cpp  cfdiheader.ixx  cfdiissuer.ixx  cfdireceiver.ixx  cfdiscanner.cpp  cfdiscanner.ixx  cfdistamp.ixx  cfdisummary.ixx  cfditax.cpp  cfditax.ixx  cfditransfer.ixx  cfdiwritter.cpp
src/cfdi.util/: cfdi.util.ixx
src/cfdi.xml/: cfdi.xml.ixx  xmlbuffer.ixx  xmlcdataparser.cpp  xmlcdataparser.ixx  xmlcommentparser.cpp  xmlcommentparser.ixx  xmldeclarationparser.cpp  xmldoctypeparser.cpp  xmldoctypeparser.ixx  xmlelementparser.cpp  xmlelementparser.ixx  xmlfragmentparser.cpp  xmlfragmentparser.ixx  xmlnode.cpp  xmlprocessinginstructionparser.cpp  xmlreader.cpp  xmltextparser.cpp  xmltextparser.ixx
